--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="/assets/images/avatar-jessica.jpeg" alt="profile" width="50px" height="50px">
+    <img src="./assets/images/avatar-jessica.jpeg" alt="profile" width="50px" height="50px">
     <h1>Jessica Randall</h1>
     <p class="lon">London, United Kingdom</p>
     <p class="front">"Front-end developer and avid reader."</p> 
